--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <br>
 
             <br>
-            <label for="bath">Bath rooms</label>
+            <label for="bath">Bath rooms   </label>
             <select id="bath" name="bath">
               <option value="1">1</option>
               <option value="2">2</option>
@@ -31,7 +31,8 @@
               <option value="8">8</option>
             </select>
         <br>
-        <label for="balcony">Balcony</label>
+            <br>
+        <label for="balcony">Balcony   </label>
         <select id="balcony" name="balcony">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -43,7 +44,8 @@
           <option value="8">8</option>
         </select>
         <br>
-            <label for="bhk">BHK</label>
+            <br>
+            <label for="bhk">BHK   </label>
             <select id="bhk" name="bhk">
               <option value="1">1</option>
               <option value="2">2</option>
@@ -62,9 +64,10 @@
 
         </form>
     </div>
-        <h1> house price:</h1>
+                <center>
+        <h1>Predicted Price is :</h1>
         <h2>{{ result }}</h2>
-
+            </center>
     </section>
     </body>
 
