--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <h1>House Price Prediction</h1>
         <form action="/result" method="POST">
             <label for="sqft">Square feet</label>
-            <input type="text" id="sqft" name="sqft">
+            <input type="text" id="sqft" name="sqft" required>
             <br>
 
             <br>
